fix background flicker when loading app

--- a/resources/assets/css/common/base.less
+++ b/resources/assets/css/common/base.less
@@ -9,11 +9,10 @@ html {
 }
 body {
   margin: 0;
+  background: @app_background;
 }
-#app {
+.app {
   .flexy(column);
-  // background: @app_background;
-  // background: darken(@app_background, 3);
   background: darken(@app_background, 2);
   height: 100vh;
   overflow: hidden;
